--- a/Newfile/mirsoft/css/mirsoft.scss
+++ b/Newfile/mirsoft/css/mirsoft.scss
@@ -585,16 +585,21 @@ section.space {
 }
 
 // 三個小圖案
-section {
-
+.give-me-space {
+@media (max-width:580px) {
+    margin-bottom: 50px;
+    
+}
     .jump {
         width: 100%;
-        height: 200px;
+        height: 100px;
         margin: 30px;
 
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-wrap: wrap;
+
         .space {
             display: flex;
             flex-direction: column;
@@ -617,73 +622,211 @@ section {
                 margin-bottom: 8px;
                 background-image: url(../img/newImage/pad.webp);
             }
-            a{
+
+            a {
                 text-decoration: underline;
                 cursor: pointer;
             }
         }
-        .left{margin-right: 35px;}
-        .right{
+
+        .left {
+            margin-right: 35px;
+        }
+
+        .right {
             margin-left: 35px;
+            @media (max-width:580px) {
+                margin-top: 20px;
+                
+            }
         }
 
     }
 }
-.all-cards{
+
+
+    .all-cards {
     width: 100%;
-    background-color: #950c17;
     display: flex;
     justify-content: center;
-    .four-card{
+
+    .four-card {
         max-width: 1600px;
         width: 90%;
         padding: 0px 5%;
         box-sizing: content-box;
-        background-color: aqua;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        .card{
-        width: 25%;
-        padding:0px 12px;
         @media (max-width:1080px) {
-            width:50%
+            width: 100%;
+            padding:0 0px;
             
         }
-        @media(max-width:540px){
-            width:100%
-        }
-            img{
-                width: 100%;
-      
+
+        .card {
+            width: 25%;
+            padding: 0px 12px;
+            margin-bottom: 0px;
+
+            @media (max-width:1080px) {
+                width: 50%
             }
-            .text{
+
+            @media(max-width:540px) {
+                width: 100%;
+                margin-bottom: 48px;
+
+            }
+
+            img {
+                width: 100%;
+                margin-bottom: 16px;
+
+            }
+
+            .text {
                 line-height: 1.5;
-                .new{
+
+                .new {
+                    width: 72px;
+                    height: 28px;
+                    padding: 6px 12px;
+                  
+                    display: inline-block;
+                    // background-color: #950c17;
+                    color: #fff;
+                    line-height: 1;
+                    font-size: 16px;
+                    font-weight: 600;
+                   
+                }
+                .new.have {
+                    width: 72px;
+                    height: 28px;
                     padding: 6px 12px;
 
                     display: inline-block;
                     background-color: #950c17;
-                    color:#fff;
+                    color: #fff;
+                    line-height: 1;
+                    font-size: 16px;
                     font-weight: 600;
-}
-                .title{font-size: 29px;
-                @media (max-width:1400px) {font-size: 24px;
-                    
+                    box-sizing: border-box;
+                    margin-bottom: 8px; 
+                    // 由於行高會往下方擠壓因此補上行高的一半(text1.5倍heightlight)，向下進而達成平衡，
                 }
-            @media(max-width:1080px){
-                font-size:21px
-            }}
-                .content{font-size: 16px;
-                margin-bottom: 16px;}
-                .buy{
-                    color: #950c17;
-                font-weight: 600;
-            cursor: pointer;
-                &::after{
 
-                } }
+                .title {
+                    font-size: 29px;
+
+                    @media (max-width:1400px) {
+                        font-size: 24px;
+
+                    }
+
+                    @media(max-width:1080px) {
+                        font-size: 21px
+                    }
+                }
+
+                .content {
+                    font-size: 16px;
+                    margin-bottom: 16px;
+                }
+                
+              .become{
+                &:hover>a.buy::after{
+                    transition: all 0.5s ease;
+                    transform: translateX(5px);
+
+                }
+                a.buy {
+                    color: #950c17;
+                    font-weight: 600;
+      
+                    cursor: pointer;
+
+
+                    &::after {
+                        display: inline-block;
+                        width: 8PX;
+                        height: 8PX;
+                        position: relative;
+                        top: 2PX;
+                        left: 5px;
+                        content: url(../img/newImage/goright-red.svg);
+                    }
+                 
+                }
+            }
+
             }
         }
+        .card.space{
+            @media (max-width:1080px) {
+              margin-bottom: 48px;
+            }
+
+            @media(max-width:540px) {
+                width: 100%;
+                margin-bottom: 48px;
+
+            }
+        }
+    }
+}
+.carousal{
+    margin-top: 96px;
+    .bander{
+        .content{
+            .content-include{
+                .title{
+                    background-color:unset;
+                }
+            }
+        }
+    }
+}
+.card-no2{
+    margin-top: 96px;
+    @media (max-width:1081px) {
+
+        margin-top: 350px
+    }
+
+    @media(max-width:860px) {
+        margin-top: 350px
+    }
+ .all-cards{
+    position: relative;
+    .four-card{position: relative;
+    .big-title2{
+        width: auto;
+        white-space: nowrap;
+        display: inline;
+        font-size:29px;
+        position: absolute;
+        top: -10%;
+        left:6%;
+        font-weight: 600;
+        @media(max-width:1080px) {
+            top: -5%;
+            left:1.5%;
+    
+        }
+        @media (max-width:540px) {
+            font-size: 24px;
+            top: -2%;
+            left:2%;
+
+        }
+
+        @media(max-width:1080px) {
+            font-size: 21px
+        }
+    
+
+    }}
     }
 }
